[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
piston="*"
piston2d-graphics="*"
pistoncore-glutin_window="*"
piston2d-opengl_graphics="*"
thiserror="1.0"

chrono = "0.4"